Issue #398 - moving all media queries to the end of the file - starting the refactor and collapsing styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3057,17 +3057,6 @@ section.disqus
    off because it already promotes position:fixed elements. Remove this when 
    desktop follows suite. */
 
-@media (max-width:480px) {
-  #home_menu {}
-  #tutorials_menu {}
-  #features_show { display: none; }
-  #slides_menu { display: none; }
-  #resources_menu {}
-  #why_menu { display: none; }
-  #profiles_menu { display: none; }
-  #contrib_menu { display: none; }
-}
-
 @media only all and (max-width: 1024px) and (max-height: 768px)
 {
   body[data-href='home'],
@@ -3080,22 +3069,107 @@ section.disqus
   }
 }
 
-@media (max-width:480px) {
+@media screen and (max-width:480px) {
+  #home_menu {}
+  #tutorials_menu {}
+  #features_show { display: none; }
+  #slides_menu { display: none; }
+  #resources_menu {}
+  #why_menu { display: none; }
+  #profiles_menu { display: none; }
+  #contrib_menu { display: none; }
+
   nav.outline {
     max-height: none !important;
   }   
+
+  .page, 
+  .page.current,
+  .page header
+  {
+    margin-top: 0 !important;
+  }
+
+  .page header.tutorial h1 {
+     font-size: 25px !important;
+  }
+
+  header.main
+  {
+    padding: .25em 0 .5em;
+  }
+
+  header.main h1
+  {
+    display: none;
+    float: left;
+  }
+
+  header.main nav ul li a,
+  header.main nav ul li#features_show,
+  header.main h1
+  {
+    margin: .1em;
+    padding: 0.4em 0.6em;
+  }
+
+  header.tutorial {
+    padding: 0em 0.9em;	
+  }
+
+  header.tutorial .browser_support {
+    margin: none !important;
+    padding: none !important;	
+  }
+
+  header.main nav ul li#features_show {
+    margin: 0;
+    padding: 0;
+  }
+
+  header.main .subheader.search
+  {
+    margin: .15em 0 0 .5em;
+  }
+
+  header.main .subheader .features ul
+  {
+    margin-left: 12px;
+    width: 360px;
+  }
+
+  header.main .subheader .features ul li
+  {
+    width: 160px;
+  }
+
+
+
+  /* Homepage */
+
+  body[data-href="home"] article.profile
+  {
+    margin: 2% 0 0 0 !important;
+    width: 100% !important;
+  }
+
+  body[data-href="home"] article.profile section
+  {
+    padding: 0 2% !important;
+  }
+  body[data-href="home"] article.profile:nth-child(3n + 1) { margin-left: 0 !important; }
+  body[data-href="home"] article.profile:nth-child(2n + 1) { margin-left: 0 !important; }
+
+  .page header .share {
+    display: none !important;
+  }
+
+  #authors {
+    display: none;
+  }
 }
 
-@media (min-width:480px) {
- article.tutorial nav.outline.toc.fixed
- {
-   position: fixed;
-   top: 50px;
-   left: 50%;
-   margin-left: -500px;
- }
-}
- 
+
 @media screen and (min-width: 1000px) {
   header.main,
   .watermark,
@@ -3107,10 +3181,7 @@ section.disqus
     -o-transform: translateZ(0);
     transform: translateZ(0);
   }
-}
 
-@media screen and (min-width: 1000px)
-{
   .subheader
   {
     background: #65A8A5;
@@ -3248,8 +3319,7 @@ section.disqus
   article.sectioned section.one_third  { width: 32%; }
 }
 
-@media screen and (max-width: 1200px)
-{
+@media screen and (max-width: 1200px) {
   .watermark,
   .paginator,
   .outline_nav_toggle img.show,
@@ -3271,8 +3341,15 @@ section.disqus
   }
 }
 
-/* Non-phone sized break points */ 
-@media (min-width:480px) {
+@media screen and (min-width:480px) {
+ article.tutorial nav.outline.toc.fixed
+ {
+   position: fixed;
+   top: 50px;
+   left: 50%;
+   margin-left: -500px;
+ }
+
   .pattern-bg {
     background: url(/static/images/background.png) repeat;
     background-color: rgb(248, 248, 248) !important;
@@ -3291,8 +3368,7 @@ section.disqus
   }
 }
 
-@media screen and (max-width: 1000px)
-{
+@media screen and (max-width:1000px) {
   .page,
   .page header,
   header,
@@ -3513,8 +3589,7 @@ section.disqus
   }
 }
 
-@media screen and (max-width: 860px)
-{
+@media screen and (max-width: 860px) {
   header.main nav ul li a, #home_horns
   header.main nav ul li#features_show,
   header.main h1
@@ -3595,8 +3670,7 @@ section.disqus
   }
 }
 
-@media screen and (max-width: 768px)
-{
+@media screen and (max-width: 768px) {
   header.main {
     padding-bottom: 0 !important;	
   }
@@ -3700,8 +3774,7 @@ section.disqus
   }
 }
 
-@media screen and (max-width: 600px)
-{
+@media screen and (max-width: 600px) {
   ul.definitions
   {
     -moz-column-count: 0;
@@ -3786,8 +3859,7 @@ section.disqus
   body[data-href="home"] article.profile:nth-child(2n + 1) { margin-left: 0 !important; }
 }
 
-@media screen and (max-width: 550px)
-{
+@media screen and (max-width: 550px) {
   .page header
   {
     padding-bottom: 3.25em;
@@ -3858,90 +3930,3 @@ section.disqus
   }
 }
 
-@media screen and (max-width: 480px)
-{
-  .page, 
-  .page.current,
-  .page header
-  {
-    margin-top: 0 !important;
-  }
-
-  .page header.tutorial h1 {
-     font-size: 25px !important;
-  }
-
-  header.main
-  {
-    padding: .25em 0 .5em;
-  }
-
-  header.main h1
-  {
-    display: none;
-    float: left;
-  }
-
-  header.main nav ul li a,
-  header.main nav ul li#features_show,
-  header.main h1
-  {
-    margin: .1em;
-    padding: 0.4em 0.6em;
-  }
-
-  header.tutorial {
-    padding: 0em 0.9em;	
-  }
-
-  header.tutorial .browser_support {
-    margin: none !important;
-    padding: none !important;	
-  }
-
-  header.main nav ul li#features_show {
-    margin: 0;
-    padding: 0;
-  }
-
-  header.main .subheader.search
-  {
-    margin: .15em 0 0 .5em;
-  }
-
-  header.main .subheader .features ul
-  {
-    margin-left: 12px;
-    width: 360px;
-  }
-
-  header.main .subheader .features ul li
-  {
-    width: 160px;
-  }
-
-
-
-  /* Homepage */
-
-  body[data-href="home"] article.profile
-  {
-    margin: 2% 0 0 0 !important;
-    width: 100% !important;
-  }
-
-  body[data-href="home"] article.profile section
-  {
-    padding: 0 2% !important;
-  }
-  body[data-href="home"] article.profile:nth-child(3n + 1) { margin-left: 0 !important; }
-  body[data-href="home"] article.profile:nth-child(2n + 1) { margin-left: 0 !important; }
-
-  .page header .share {
-    display: none !important;
-  }
-
-  #authors {
-    display: none;
-  }
-}
